# http-monitorv2

./: .dir-locals.el  Cargo.toml  README.md
.vim/: coc-settings.json
http-monitor/: Cargo.toml
http-monitor-common/: Cargo.toml
http-monitor-common/src/: lib.rs
http-monitor-ebpf/: Cargo.toml
http-monitor-ebpf/src/: helper_http.rs  main.rs  maps_http.rs
http-monitor/src/: main.rs
workshopcode/: Dockerfile  build.sh
workshopcode/capture-traffic/: hooks.c
xtask/src/: build_ebpf.rs  run.rs
