[package]
name = "http-monitor-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.1.0"
aya-ebpf-cty = "0.2.1"
aya-log-ebpf = "0.1.0"
http-monitor-common = { path = "../http-monitor-common" }
log = "0.4.22"

[[bin]]
name = "http-monitor"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
